# dome

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml  pytest.ini
.github/: ISSUE_COMMENT_TEMPLATE.md
apps/python-demo/: README.md  pyproject.toml  requirements.txt
apps/python-demo/src/mvp_agent/: main.py
deploy/: README.md
doc/: concurrency_model.md  event_idempotency.md  iterative-loop-review-2026-02-14.md  mvp_orchestration_workplan.md  production_readiness_tracker.md  retry_and_backoff_policy.md  ssot_living_doc_telemetry_gated_agent_identity_mvp_v_0.md  tools_skills_inventory.md  xa_execution_tracker.md  xtrlv2_substrate_alignment_matrix.md
scripts/: install_domed_user_service.sh  uninstall_domed_user_service.sh
tests/: test_browse_skill_domed_path.py  test_checkers.py  test_codex_browse_skill_fold.py  test_concurrency_safety.py  test_dependency_allowlist.py  test_deprecated_path_lint.py  test_dispatcher.py  test_dome_cli_list_tools.py  test_domed_client_stub_matrix.py  test_domed_codegen.py  test_domed_endpoints.py  test_domed_executor_local_process.py  test_domed_operator_healthcheck.py  test_domed_provenance.py  test_domed_runtime_state.py  test_domed_service_execution_routing.py  test_domed_service_integration.py  test_domed_sqlite_state.py  test_domed_stream_follow.py  test_domed_tool_registry.py  test_event_envelope_runtime.py  test_evidence_capsule.py  test_implementers.py  test_ingest_catalog.py  test_loop_tick.py  test_m5_d3_resolution.py  test_m5_failure_modes.py  test_m5_migration_inventory.py  test_m5_subprocess_policy.py  (+32 more)
(+489 files in other folders)
