[project]
name = "dome"
version = "0.2.0"
description = "MVP v0.2 consolidated agentic SSOT and orchestration scaffold"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0",
  "pytest>=8.0.0",
  "opentelemetry-sdk>=1.24.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F"]
ignore = ["F401", "F841"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
