[project]
name = "dome"
version = "0.2.0"
description = "MVP v0.2 consolidated agentic SSOT and orchestration scaffold"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0",
  "grpcio>=1.76.0",
  "jsonschema>=4.0.0",
  "protobuf>=6.33.5",
  "pytest>=8.0.0",
  "opentelemetry-sdk>=1.24.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F"]
ignore = ["F401", "F841"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
dome-codex-skill = "tools.codex.dome_cli:main"
domed = "tools.domed.daemon:main"
